# j_video

./: .gitignore  README.md  main.py  pyproject.toml
htmlcov/: index.html
test/: conftest.py  test_goods.py
tests/: __init__.py  conftest.py  test_csverr.py  test_goods.py  test_keyboard.py  test_phone.py
utils/: config.py  csverror.py  goods.py  keyboard.py
